[gd_scene load_steps=46 format=2]

[ext_resource path="res://Assets/customisation/Avatar-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/customisation/Avatar-4.png" type="Texture" id=2]
[ext_resource path="res://Assets/customisation/Dice-3.png" type="Texture" id=3]
[ext_resource path="res://Assets/customisation/Frame-5.png" type="Texture" id=4]
[ext_resource path="res://Assets/customisation/Dice-6.png" type="Texture" id=5]
[ext_resource path="res://Assets/customisation/red.png" type="Texture" id=6]
[ext_resource path="res://Assets/customisation/Frame-1.png" type="Texture" id=7]
[ext_resource path="res://Assets/customisation/Avatar-2.png" type="Texture" id=8]
[ext_resource path="res://Assets/customisation/Dice-1.png" type="Texture" id=9]
[ext_resource path="res://Assets/customisation/Dice-7.png" type="Texture" id=10]
[ext_resource path="res://Assets/customisation/pink.png" type="Texture" id=11]
[ext_resource path="res://Assets/customisation/Dice-2.png" type="Texture" id=12]
[ext_resource path="res://Assets/customisation/Frame-2.png" type="Texture" id=13]
[ext_resource path="res://Assets/customisation/Frame-7.png" type="Texture" id=14]
[ext_resource path="res://Assets/customisation/Avatar-7.png" type="Texture" id=15]
[ext_resource path="res://Assets/customisation/Dice-5.png" type="Texture" id=16]
[ext_resource path="res://Assets/customisation/purple.png" type="Texture" id=17]
[ext_resource path="res://Assets/customisation/Avatar-5.png" type="Texture" id=18]
[ext_resource path="res://Assets/customisation/Frame-3.png" type="Texture" id=19]
[ext_resource path="res://Assets/customisation/blue.png" type="Texture" id=20]
[ext_resource path="res://Assets/customisation/Frame-6.png" type="Texture" id=21]
[ext_resource path="res://Assets/customisation/inActive-Tab.png" type="Texture" id=22]
[ext_resource path="res://Assets/customisation/Dice-4.png" type="Texture" id=23]
[ext_resource path="res://Assets/customisation/Fără titlu1.png" type="Texture" id=24]
[ext_resource path="res://Assets/customisation/Avatar-6.png" type="Texture" id=25]
[ext_resource path="res://Assets/customisation/Frame-4.png" type="Texture" id=26]
[ext_resource path="res://Assets/customisation/yellow.png" type="Texture" id=27]
[ext_resource path="res://Assets/customisation/green.png" type="Texture" id=28]
[ext_resource path="res://Assets/customisation/Active-Tab.png" type="Texture" id=29]
[ext_resource path="res://Assets/customisation/Avatar-3.png" type="Texture" id=30]
[ext_resource path="res://Assets/customisation/custom.gd" type="Script" id=31]
[ext_resource path="res://Assets/customisation/back-button.png" type="Texture" id=32]
[ext_resource path="res://Assets/customisation/Choose Map (7).png" type="Texture" id=33]
[ext_resource path="res://Assets/customisation/Choose Map (11).png" type="Texture" id=34]
[ext_resource path="res://Assets/customisation/Choose Map (12).png" type="Texture" id=35]
[ext_resource path="res://Assets/customisation/Choose Map (8).png" type="Texture" id=36]
[ext_resource path="res://Assets/customisation/Choose Map (9).png" type="Texture" id=37]
[ext_resource path="res://Assets/customisation/Choose Map (10).png" type="Texture" id=38]
[ext_resource path="res://Assets/customisation/Frame.png" type="Texture" id=39]
[ext_resource path="res://Assets/customisation/color.png" type="Texture" id=40]
[ext_resource path="res://Assets/customisation/troop.png" type="Texture" id=41]
[ext_resource path="res://Assets/customisation/Dice.png" type="Texture" id=42]
[ext_resource path="res://Assets/customisation/badge2.png" type="Texture" id=43]
[ext_resource path="res://Assets/customisation/Avatar.png" type="Texture" id=44]
[ext_resource path="res://Assets/customisation/Choose_Map_27.png" type="Texture" id=45]

[node name="Node2D" type="Node2D"]
script = ExtResource( 31 )

[node name="Reference-Screen" type="Sprite" parent="."]
position = Vector2( 641.5, 360.5 )
scale = Vector2( 0.539583, 0.541481 )
texture = ExtResource( 24 )

[node name="Active-Tab2" type="Sprite" parent="."]
position = Vector2( 295.781, 554.25 )
scale = Vector2( 0.495452, 0.500782 )
texture = ExtResource( 29 )

[node name="Active-Tab3" type="Sprite" parent="."]
position = Vector2( 474.489, 554.25 )
scale = Vector2( 0.495452, 0.500782 )
texture = ExtResource( 29 )

[node name="Active-Tab4" type="Sprite" parent="."]
position = Vector2( 653.331, 554.25 )
scale = Vector2( 0.495452, 0.500782 )
texture = ExtResource( 29 )

[node name="Active-Tab5" type="Sprite" parent="."]
position = Vector2( 832.702, 554.25 )
scale = Vector2( 0.495452, 0.500782 )
texture = ExtResource( 29 )

[node name="Active-Tab6" type="Sprite" parent="."]
position = Vector2( 1012.43, 554.25 )
scale = Vector2( 0.495452, 0.500782 )
texture = ExtResource( 29 )

[node name="Active-Tab7" type="Sprite" parent="."]
position = Vector2( 1190.8, 554.25 )
scale = Vector2( 0.495452, 0.500782 )
texture = ExtResource( 29 )

[node name="Active-Tab" type="Sprite" parent="."]
position = Vector2( 114.323, 554.25 )
scale = Vector2( 0.495452, 0.500782 )
texture = ExtResource( 29 )

[node name="InActive-Tab" type="Sprite" parent="."]
position = Vector2( 102.5, 597.335 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 22 )

[node name="InActive-Tab2" type="Sprite" parent="."]
position = Vector2( 282.341, 597.335 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 22 )

[node name="InActive-Tab3" type="Sprite" parent="."]
position = Vector2( 462.28, 597.335 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 22 )

[node name="InActive-Tab4" type="Sprite" parent="."]
position = Vector2( 641.603, 597.335 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 22 )

[node name="InActive-Tab5" type="Sprite" parent="."]
position = Vector2( 819.08, 597.335 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 22 )

[node name="InActive-Tab6" type="Sprite" parent="."]
position = Vector2( 999.728, 597.335 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 22 )

[node name="InActive-Tab7" type="Sprite" parent="."]
position = Vector2( 1179.74, 597.335 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 22 )

[node name="Frame" type="Node2D" parent="."]
visible = false

[node name="Frame-1" type="Sprite" parent="Frame"]
position = Vector2( 103, 576 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 7 )

[node name="Frame-7" type="Sprite" parent="Frame"]
position = Vector2( 281.694, 576 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 13 )

[node name="Frame-2" type="Sprite" parent="Frame"]
position = Vector2( 463.399, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 19 )

[node name="Frame-3" type="Sprite" parent="Frame"]
position = Vector2( 641.697, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 26 )

[node name="Frame-4" type="Sprite" parent="Frame"]
position = Vector2( 820.48, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 4 )

[node name="Frame-5" type="Sprite" parent="Frame"]
position = Vector2( 1002.21, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 21 )

[node name="Frame-6" type="Sprite" parent="Frame"]
position = Vector2( 1180.51, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 14 )

[node name="Avatar" type="Node2D" parent="."]
visible = false

[node name="Frame-1" type="Sprite" parent="Avatar"]
position = Vector2( 103, 576 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 1 )

[node name="Frame-7" type="Sprite" parent="Avatar"]
position = Vector2( 281.694, 576 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 8 )

[node name="Frame-2" type="Sprite" parent="Avatar"]
position = Vector2( 463.399, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 30 )

[node name="Frame-3" type="Sprite" parent="Avatar"]
position = Vector2( 641.697, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 2 )

[node name="Frame-4" type="Sprite" parent="Avatar"]
position = Vector2( 820.48, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 18 )

[node name="Frame-5" type="Sprite" parent="Avatar"]
position = Vector2( 1002.21, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 25 )

[node name="Frame-6" type="Sprite" parent="Avatar"]
position = Vector2( 1180.51, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 15 )

[node name="Dice" type="Node2D" parent="."]
visible = false

[node name="Frame-1" type="Sprite" parent="Dice"]
position = Vector2( 103, 576 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 9 )

[node name="Frame-7" type="Sprite" parent="Dice"]
position = Vector2( 281.694, 576 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 12 )

[node name="Frame-2" type="Sprite" parent="Dice"]
position = Vector2( 463.399, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 3 )

[node name="Frame-3" type="Sprite" parent="Dice"]
position = Vector2( 641.697, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 23 )

[node name="Frame-4" type="Sprite" parent="Dice"]
position = Vector2( 820.48, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 16 )

[node name="Frame-5" type="Sprite" parent="Dice"]
position = Vector2( 1002.21, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 5 )

[node name="Frame-6" type="Sprite" parent="Dice"]
position = Vector2( 1180.51, 576.475 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 10 )

[node name="Color" type="Node2D" parent="."]

[node name="Frame-1" type="Sprite" parent="Color"]
position = Vector2( 102.452, 590.333 )
scale = Vector2( 0.278, 2.039 )
texture = ExtResource( 20 )

[node name="Frame-7" type="Sprite" parent="Color"]
position = Vector2( 281.694, 590.333 )
scale = Vector2( 0.278, 2.039 )
texture = ExtResource( 28 )

[node name="Frame-2" type="Sprite" parent="Color"]
position = Vector2( 463.399, 590.333 )
scale = Vector2( 0.278, 2.039 )
texture = ExtResource( 11 )

[node name="Frame-3" type="Sprite" parent="Color"]
position = Vector2( 641.697, 590.333 )
scale = Vector2( 0.278, 2.039 )
texture = ExtResource( 17 )

[node name="Frame-4" type="Sprite" parent="Color"]
position = Vector2( 820.48, 590.333 )
scale = Vector2( 0.278, 2.039 )
texture = ExtResource( 6 )

[node name="Frame-5" type="Sprite" parent="Color"]
position = Vector2( 1002.21, 590.333 )
scale = Vector2( 0.278, 2.039 )
texture = ExtResource( 27 )

[node name="Button" type="Button" parent="."]
show_behind_parent = true
margin_left = 16.0
margin_top = 448.0
margin_right = 187.0
margin_bottom = 709.0

[node name="Button2" type="Button" parent="."]
show_behind_parent = true
margin_left = 196.0
margin_top = 451.0
margin_right = 367.0
margin_bottom = 712.0

[node name="Button3" type="Button" parent="."]
show_behind_parent = true
margin_left = 376.0
margin_top = 449.0
margin_right = 547.0
margin_bottom = 710.0

[node name="Button4" type="Button" parent="."]
show_behind_parent = true
margin_left = 556.0
margin_top = 452.0
margin_right = 727.0
margin_bottom = 713.0

[node name="Button5" type="Button" parent="."]
show_behind_parent = true
margin_left = 735.0
margin_top = 450.0
margin_right = 906.0
margin_bottom = 711.0

[node name="Button6" type="Button" parent="."]
show_behind_parent = true
margin_left = 915.0
margin_top = 448.0
margin_right = 1086.0
margin_bottom = 709.0

[node name="Button7" type="Button" parent="."]
show_behind_parent = true
margin_left = 1095.0
margin_top = 451.0
margin_right = 1266.0
margin_bottom = 712.0

[node name="Back-button" type="Sprite" parent="."]
position = Vector2( 76, 79 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 32 )

[node name="Button8" type="Button" parent="."]
show_behind_parent = true
margin_left = -8.0
margin_top = 41.0
margin_right = 154.0
margin_bottom = 119.0

[node name="Button9" type="Button" parent="."]
show_behind_parent = true
margin_left = 117.0
margin_top = 135.0
margin_right = 282.0
margin_bottom = 189.0

[node name="Button10" type="Button" parent="."]
show_behind_parent = true
margin_left = 285.0
margin_top = 134.0
margin_right = 462.0
margin_bottom = 188.0

[node name="Button11" type="Button" parent="."]
show_behind_parent = true
margin_left = 464.0
margin_top = 134.0
margin_right = 641.0
margin_bottom = 188.0

[node name="Button12" type="Button" parent="."]
show_behind_parent = true
margin_left = 645.0
margin_top = 135.0
margin_right = 822.0
margin_bottom = 189.0

[node name="mid" type="Node2D" parent="."]

[node name="Frame-8" type="Sprite" parent="mid"]
position = Vector2( 375.338, 307.764 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 1 )

[node name="Frame-9" type="Sprite" parent="mid"]
position = Vector2( 375.338, 307.764 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 8 )

[node name="Frame-10" type="Sprite" parent="mid"]
position = Vector2( 375.338, 307.764 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 30 )

[node name="Frame-11" type="Sprite" parent="mid"]
position = Vector2( 375.338, 307.764 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 2 )

[node name="Frame-12" type="Sprite" parent="mid"]
position = Vector2( 375.338, 307.764 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 18 )

[node name="Frame-13" type="Sprite" parent="mid"]
position = Vector2( 375.338, 307.764 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 25 )

[node name="Frame-14" type="Sprite" parent="mid"]
position = Vector2( 375.338, 307.764 )
scale = Vector2( 0.543182, 0.535534 )
texture = ExtResource( 15 )

[node name="Frame-15" type="Sprite" parent="mid"]
position = Vector2( 374.952, 310.272 )
scale = Vector2( 0.912, 0.912 )
z_index = 5
texture = ExtResource( 7 )

[node name="Frame-16" type="Sprite" parent="mid"]
position = Vector2( 374.952, 310.272 )
scale = Vector2( 0.912, 0.912 )
z_index = 5
texture = ExtResource( 13 )

[node name="Frame-17" type="Sprite" parent="mid"]
position = Vector2( 374.952, 310.272 )
scale = Vector2( 0.912, 0.912 )
z_index = 5
texture = ExtResource( 19 )

[node name="Frame-18" type="Sprite" parent="mid"]
position = Vector2( 374.952, 310.272 )
scale = Vector2( 0.912, 0.912 )
z_index = 5
texture = ExtResource( 26 )

[node name="Frame-19" type="Sprite" parent="mid"]
position = Vector2( 374.952, 310.272 )
scale = Vector2( 0.912, 0.912 )
z_index = 5
texture = ExtResource( 4 )

[node name="Frame-20" type="Sprite" parent="mid"]
position = Vector2( 374.952, 310.272 )
scale = Vector2( 0.912, 0.912 )
z_index = 5
texture = ExtResource( 21 )

[node name="Frame-21" type="Sprite" parent="mid"]
position = Vector2( 374.952, 310.272 )
scale = Vector2( 0.912, 0.912 )
z_index = 5
texture = ExtResource( 14 )

[node name="ChooseMap(8)" type="Sprite" parent="."]
position = Vector2( 372, 161.337 )
scale = Vector2( 0.684877, 0.674033 )
texture = ExtResource( 36 )

[node name="ChooseMap(8)2" type="Sprite" parent="."]
position = Vector2( 555, 161 )
scale = Vector2( 0.684877, 0.674033 )
texture = ExtResource( 36 )

[node name="ChooseMap(8)3" type="Sprite" parent="."]
position = Vector2( 737, 161 )
scale = Vector2( 0.684877, 0.674033 )
texture = ExtResource( 36 )

[node name="ChooseMap(8)4" type="Sprite" parent="."]
position = Vector2( 920, 161 )
scale = Vector2( 0.684877, 0.674033 )
texture = ExtResource( 36 )

[node name="ChooseMap(7)" type="Sprite" parent="."]
position = Vector2( 199.5, 161.343 )
scale = Vector2( 0.684971, 0.685083 )
texture = ExtResource( 33 )

[node name="ChooseMap(9)" type="Sprite" parent="."]
position = Vector2( 1097, 161 )
scale = Vector2( 0.684877, 0.674033 )
texture = ExtResource( 37 )

[node name="ChooseMap(8)5" type="Sprite" parent="."]
position = Vector2( 372, 160.834 )
scale = Vector2( 0.684877, 0.668508 )
texture = ExtResource( 34 )

[node name="ChooseMap(8)6" type="Sprite" parent="."]
position = Vector2( 555, 161 )
scale = Vector2( 0.684877, 0.674033 )
texture = ExtResource( 34 )

[node name="ChooseMap(8)7" type="Sprite" parent="."]
position = Vector2( 737, 161 )
scale = Vector2( 0.684877, 0.674033 )
texture = ExtResource( 34 )

[node name="ChooseMap(8)8" type="Sprite" parent="."]
position = Vector2( 920, 161 )
scale = Vector2( 0.684877, 0.674033 )
texture = ExtResource( 34 )

[node name="ChooseMap(7)2" type="Sprite" parent="."]
visible = false
position = Vector2( 197, 160.84 )
scale = Vector2( 0.684971, 0.679558 )
texture = ExtResource( 35 )

[node name="ChooseMap(9)2" type="Sprite" parent="."]
position = Vector2( 1097, 161 )
scale = Vector2( 0.684877, 0.674033 )
texture = ExtResource( 38 )

[node name="Frame2" type="Sprite" parent="."]
position = Vector2( 746, 159 )
scale = Vector2( 0.604, 0.604 )
texture = ExtResource( 39 )

[node name="Color2" type="Sprite" parent="."]
position = Vector2( 573, 102 )
scale = Vector2( 0.604, 0.604 )
texture = ExtResource( 40 )

[node name="Dice2" type="Sprite" parent="."]
position = Vector2( 778, 145 )
scale = Vector2( 0.679, 0.679 )
texture = ExtResource( 42 )

[node name="Avatar2" type="Sprite" parent="."]
position = Vector2( 155, 159 )
scale = Vector2( 0.604, 0.604 )
texture = ExtResource( 44 )

[node name="Badge2" type="Sprite" parent="."]
position = Vector2( 1065, 187 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 43 )

[node name="Troop" type="Sprite" parent="."]
position = Vector2( 848, 93 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 41 )

[node name="ChooseMap27" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 638.545, 344.879 )
scale = Vector2( 0.541212, 0.366106 )
texture = ExtResource( 45 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_Button10_pressed"]
[connection signal="pressed" from="Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="Button12" to="." method="_on_Button12_pressed"]
